--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
 
-$font-size: 1rem
+$font-size: 1rem;
 $font-style: normal;
 $font-weight: normal;
 $font-family: Raleway, Helvetica Neue, Arial, sans-serif;
