some basic layout

--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,2 @@
-body,html,ol,ul{margin:0;padding:0}html{font:normal 1rem normal Raleway,Helvetica Neue,Arial,sans-serif}h1{font-family:Playfair Display,Times New Roman,Times,serif}h2{font-family:Raleway,Helvetica Neue,Arial,sans-serif}body{background-color:#292927}body,h1{color:ivory}h2{color:#cafa13}
+body,html,ol,ul{margin:0;padding:0}html{font:normal 1rem normal Raleway,Helvetica Neue,Arial,sans-serif}h1{font-family:Playfair Display,Times New Roman,Times,serif}h2{font-family:Raleway,Helvetica Neue,Arial,sans-serif}body{background-color:#292927}body,h1{color:ivory}h2{color:#cafa13}.vertical-center{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;-ms-flex-pack:center;justify-content:center}
 /*# sourceMappingURL=main.css.map */
