--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -6,10 +6,17 @@ html {
 
 h1 {
 	font-family: $header-font;
+	text-transform: uppercase;
+	text-align: center;
 }
 
 h2 {
 	font-family: $font-family;
+}
+
+nav ul {
+	text-transform: uppercase;
+	font-size: 14px;
 }
 
 
@@ -18,6 +25,10 @@ h2 {
 body {
 	background-color: $bg;
 	color: $text-col;
+}
+
+header {
+	background-color: $header;
 }
 
 h1 {
@@ -30,8 +41,30 @@ h2 {
 
 // Basic layout classes
 
+header {
+	display: flex;
+	justify-content: center;
+}
+
 .vertical-center {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+// Navigation
+nav {
+	background-color: $navbg;
+	ul {
+		color: $bg;
+		list-style-type: none;
+		margin: 4px 0 4px 0;
+		li {
+			display: inline-block;
+			padding-left: 8px;
+		}
+		li:first-of-type {
+			padding-left: 4px;
+		}
+	}
 }
