--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -12,6 +12,7 @@ h1 {
 
 h2 {
 	font-family: $font-family;
+	text-align: center;
 }
 
 nav ul {
@@ -66,5 +67,36 @@ nav {
 		li:first-of-type {
 			padding-left: 4px;
 		}
+	}
+}
+
+// Main
+body {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+
+}
+
+main {
+	flex: 1;
+
+	
+	justify-content: flex-end;
+
+	p {
+		font-size: 0.8em;
+		padding: 0 12px 0 12px;
+	}
+}
+
+#main_image {
+	flex: 1 2;
+	align-self: center;
+	max-width: 100%;
+	opacity: 0.25;	
+	@media only screen and ('min-device-width: 320px') {
+		max-width: 80%;
 	}
 }
