--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -2,6 +2,7 @@
 * {
 	box-sizing: border-box;
 }
+
 html {
 	font: $font-style $font-size $font-weight $font-family;
 }
@@ -26,12 +27,15 @@ nav ul {
 // Colours
 
 body {
-	background-color: $bg;
 	color: $text-col;
 }
 
 header {
 	background-color: $header;
+}
+
+nav {
+	background-color: $navbg;
 }
 
 h1 {
@@ -57,7 +61,6 @@ header {
 
 // Navigation
 nav {
-	background-color: $navbg;
 	ul {
 		color: $bg;
 		list-style-type: none;
@@ -74,34 +77,29 @@ nav {
 
 // Main
 body {
-	min-height: 100vh;
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-content: center;
-
+	background: url('/img/wheelSmall.jpg') no-repeat bottom;
+	background-size: 100vw;
 }
 
 main {
-	flex: 1;
-	justify-content: flex-end;
-
+	flex: 0.75;
+	justify-content: flex-start;
 	p {
 		font-size: 0.8em;
-		padding: 0 12px 0 12px;
+		padding: 0 8px 0 8px;
 	}
+	background-color: $bg;
 }
 
-#photograph {
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-	width: 100%;
-	max-height: 500px;
+div#photograph {
+	flex: 1.3;
+	background-color: $bg;
+	opacity: 0.85;
+	z-index: 1;
 }
 
-img#main_image {
-	max-width: 100%;
-	max-height: 80%;
-	opacity: $img_opacity;
 
-}
