--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,6 +13,7 @@ $img_opacity: 0.25;
 // Colours
 
 $bg: #292927;
+$bg_transparent: rgba(41, 41, 39, 0.2);
 $header: #8100df;
 $h1col: #fffff0;
 $subheading: #cafa13;
