--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -64,16 +64,24 @@ nav {
 	ul {
 		color: $bg;
 		list-style-type: none;
-		margin: 4px 0 4px 0;
 		li {
 			display: inline-block;
-			padding-left: 8px;
+			margin-left: 8px;
+			padding: 4px 4px 4px 4px;
+			// border-right: 1px solid $link_border;
 		}
 		li:first-of-type {
-			padding-left: 4px;
+			margin-left: 0;
 		}
 	}
 }
+
+
+.active {
+	background-color: $bg;
+	color: $text-col;
+}
+
 
 // Main
 body {
