device widths updated

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -24,6 +24,10 @@ $link_border: #8100df;
 
 // Device widths
 
-$iphone5: 319px;
-$iphone6: 374px;
+$iphone5: 320px;
+$iphone6: 375px;
 $iphone6plus: 410px;
+
+$tablet: 768px;
+
+$desktop: 900px;
