Tablet margins and padding

--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -1,7 +1,7 @@
 // Tablet enhancements
 
 // Layout 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: $tablet) {
 
 	@supports (display: grid) {
 		// Grid layout
@@ -47,7 +47,10 @@
 			border: 1px solid limegreen;
 			display: flex;
 			flex-direction: row;
-
+		}
+		main section p {
+			padding-left: 10px;
+			padding-right: 10px;
 		}
 
 		#photograph {
@@ -84,6 +87,9 @@
 			font-size: 4rem;
 			font-weight: normal;
 			text-align: right;
+		}
+		main p {
+			font-size: 1.2em;
 		}
 	}
 }
