--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -8,7 +8,7 @@
 		body {
 			display: grid;
 			grid-template-columns: 40% 20% 40%;
-			grid-template-rows: 10% 30% 1fr;
+			grid-template-rows: 10% 30% 30px 1fr;
 			align-items: stretch;
 			justify-items: stretch;
 			max-width: 100vw;
@@ -16,7 +16,7 @@
 
 		div#headercontainer {
 			grid-column: 1 / span 3;
-			grid-row: 1 / span 3;
+			grid-row: 1 / span 2;
 			display: flex;
 			justify-content: flex-end;
 			transform: skewX($headerskew);
@@ -37,29 +37,36 @@
 
 		nav {
 			grid-column: 3;
+			grid-row: 3;
 			padding-bottom: 5px;
 			padding-top: 5px;
 
 		}
 
 		main {
-			grid-column: 1;
-			grid-row: 5 / span 1;
+			grid-column: 1 / span 3;
+			grid-row: 4 / span 2;
 			border: 1px solid limegreen;
 			display: flex;
-			flex-direction: row;
+			flex-direction: column;
 		}
+
+		main section {
+			max-width: 33%;
+		}
+
 		main section p {
 			padding-left: 10px;
 			padding-right: 10px;
 		}
 
 		div#photograph {
-			grid-column: 2 / span 2;
-			align-self: end;
-			opacity: 0.2;
-			margin-top: 100px;
-			border: 1px solid yellow;
+			// grid-column: 2 / span 2;
+			// align-self: end;
+			// opacity: 0.2;
+			// margin-top: 100px;
+			// border: 1px solid yellow;
+			display: none;
 		}
 	}
 }
