--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -8,30 +8,37 @@
 		body {
 			display: grid;
 			grid-template-columns: 40% 20% 40%;
-			grid-template-rows: 10% 30% 30px 1fr;
+			grid-template-rows: 10% 40% 30px 1fr;
 			align-items: stretch;
 			justify-items: stretch;
 			max-width: 100vw;
 		}
 
 		div#headercontainer {
-			grid-column: 1 / span 3;
+			grid-column: 1 / span 2;
 			grid-row: 1 / span 2;
+			align-self: flex-end;
 			display: flex;
 			justify-content: flex-end;
+			height: 100%;
+			transform-origin: left top;
 			transform: skewX($headerskew);
-			transform-origin: left, bottom;
+			width: 100%;
+			 z-index: -1;
+
 		}
 
 		header {
+			grid-column: 2 / span 2;
+			grid-row: 1 / span 2;
+			align-self: flex-start;
 					h1 {
 						flex: 1;
 						max-width: 80%;
 						padding-top: 1.5em;
-						padding-right: 0.3em;
+						margin-right: 0.3em;
 						margin-top: 0;
 					}
-				transform: skewX(-$headerskew);
 				justify-content: flex-end;
 		}
 
@@ -46,7 +53,6 @@
 		main {
 			grid-column: 1 / span 3;
 			grid-row: 4 / span 2;
-			border: 1px solid limegreen;
 			display: flex;
 			flex-direction: column;
 		}
@@ -78,7 +84,6 @@
 		nav, main {
 			background-color: $bg;
 				ul {color: $text-col;}
-
 		}
 		body {
 			background: none;
@@ -86,13 +91,18 @@
 		}
 		#headercontainer, h1 {
 			background-color: $header;
+			// overflow: hidden;
 		}
 		div#photograph {
 			background: none;
 		}
 		main {
-			background: url('/img/greenwheel.jpg') no-repeat top;
+			background: url('/img/bluewheel.jpg') no-repeat top;
 			background-size: cover;
+			
+				section {
+
+				}
 		}
 	}
 }
@@ -105,7 +115,10 @@
 			text-align: right;
 		}
 		main p {
-			font-size: 1.2em;
+			font-size: 1.1em;
+		}
+		h2 {
+			display: none;
 		}
 	}
 }
