--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -8,7 +8,7 @@
 		body {
 			display: grid;
 			grid-template-columns: 40% 20% 40%;
-			grid-template-rows: 10% 40% 30px 1fr;
+			grid-template-rows: 100px 240px 30px 1fr;
 			align-items: stretch;
 			justify-items: stretch;
 			max-width: 100vw;
@@ -20,11 +20,11 @@
 			align-self: flex-end;
 			display: flex;
 			justify-content: flex-end;
-			height: 100%;
 			transform-origin: left top;
 			transform: skewX($headerskew);
+			min-height: 100%;
 			width: 100%;
-			 z-index: -1;
+			z-index: -1;
 
 		}
 
@@ -32,22 +32,23 @@
 			grid-column: 2 / span 2;
 			grid-row: 1 / span 2;
 			align-self: flex-start;
-					h1 {
-						flex: 1;
-						max-width: 80%;
-						padding-top: 1.5em;
-						margin-right: 0.3em;
-						margin-top: 0;
-					}
-				justify-content: flex-end;
+			justify-content: center;
+			height: 90%;
+			display: flex;
+			flex-direction: column;
+				h1 {
+					max-width: 80%;
+					padding-top: 0em;
+					margin-top: 0;
+				}
 		}
 
 		nav {
-			grid-column: 3;
+			grid-column: 2 / span 2;
 			grid-row: 3;
 			padding-bottom: 5px;
 			padding-top: 5px;
-
+			width: 100%;
 		}
 
 		main {
@@ -55,23 +56,21 @@
 			grid-row: 4 / span 2;
 			display: flex;
 			flex-direction: column;
+			justify-content: center;
+			align-items: center;
 		}
 
 		main section {
-			max-width: 33%;
+			max-width: 50%;
 		}
 
 		main section p {
 			padding-left: 10px;
 			padding-right: 10px;
+			margin-bottom: 2em;
 		}
 
 		div#photograph {
-			// grid-column: 2 / span 2;
-			// align-self: end;
-			// opacity: 0.2;
-			// margin-top: 100px;
-			// border: 1px solid yellow;
 			display: none;
 		}
 	}
@@ -91,8 +90,8 @@
 		}
 		#headercontainer, h1 {
 			background-color: $header;
-			// overflow: hidden;
 		}
+
 		div#photograph {
 			background: none;
 		}
@@ -115,13 +114,12 @@
 			text-align: right;
 		}
 		main p {
-			font-size: 1.1em;
+			font-size: 1.3em;
 		}
 		h2 {
 			display: none;
 		}
 	}
 }
-// Photo
 
 
