--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -46,11 +46,14 @@ h2 {
 	color: $subheading;
 }
 
-// Basic layout classes
+// Header
 
 header {
 	display: flex;
 	justify-content: center;
+	h1 {
+		font-size: 1.5rem;
+	}
 }
 
 .vertical-center {
@@ -64,14 +67,14 @@ nav {
 	ul {
 		color: $bg;
 		list-style-type: none;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+
 		li {
-			display: inline-block;
-			margin-left: 8px;
-			padding: 4px 4px 4px 4px;
+			// margin-left: 8px;
+			padding-top: 4px;
 			// border-right: 1px solid $link_border;
-		}
-		li:first-of-type {
-			margin-left: 0;
 		}
 	}
 }
@@ -85,6 +88,7 @@ nav {
 // Main
 body {
 	height: 100vh;
+	max-width: 100vw;
 	display: flex;
 	flex-direction: column;
 	align-content: center;
