--- a/src/sass/_scaffolding.scss
+++ b/src/sass/_scaffolding.scss
@@ -51,8 +51,10 @@ h2 {
 header {
 	display: flex;
 	justify-content: center;
-	h1 {
+	@media only screen and (max-width: 320px) {
+		h1 {
 		font-size: 1.5rem;
+		}
 	}
 }
 
